--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "astro": "^5.0.0"
-    
   },
   "devDependencies": {
-    "@astrojs/cloudflare": "^12.6.12"
+    "@astrojs/cloudflare": "^12.6.12",
+    "@astrojs/sitemap": "^3.0.0"
   }
 }
